[package]
name = "brainfrsck"
version = "1.0.0"
authors = ["Charlie Thomson <charliecthomson@gmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "An easy-to-use brainfuck interpreter"
repository = "https://www.github.com/charliethomson/brainfrsck"
readme = "./README.md"
keywords = ["brainfuck", "interpreter"]
documentation = "https://www.docs.rs/brainfrsck"

[dev-dependencies]
rand = "0.7.2"